--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -77,7 +77,7 @@ jobs:
         uses: microsoft/setup-msbuild@v1.0.2
 
       - name: Publish .NET Core
-        run: dotnet publish -p:PublishProfile= "../../WPF-MVVM/Properties/PublishProfiles/FolderProfile.pubxml"
+        run: dotnet publish -p:PublishProfile=FolderProfile
 
     # Execute all unit tests in the solution
     #- name: Execute unit tests
